--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,25 @@
+certifi==2018.8.13
 diff-match-patch==20121119
-Django==2.0.1
-django-crispy-forms==1.7.0
+Django==2.1
+django-crispy-forms==1.7.2
 django-formtools==2.1
-django-import-export==0.6.1
+django-import-export==1.0.1
 django-pure-pagination==0.3.0
 django-ranged-response==0.2.0
-django-reversion==2.0.12
-django-simple-captcha==0.5.6
+django-reversion==3.0.0
+django-simple-captcha==0.5.9
 et-xmlfile==1.0.1
 future==0.16.0
-httplib2==0.9.2
-jdcal==1.3
-mysqlclient==1.3.12
+httplib2==0.11.3
+jdcal==1.4
 odfpy==1.3.6
-openpyxl==2.4.9
-Pillow==5.0.0
-pytz==2017.3
-PyYAML==3.12
+openpyxl==2.5.5
+Pillow==5.2.0
+pytz==2018.5
+PyYAML==3.13
 six==1.11.0
 tablib==0.12.1
 unicodecsv==0.14.1
+wincertstore==0.2
 xlrd==1.1.0
 xlwt==1.3.0
